@@ -1,6 +1,7 @@
 20 June 2004 Sylvain Pion
 - Merge Static_filters into Filtered_kernel.
 - Static_filter_error : add ulp() function for new filters.
+- Static_filter::Orientation_3 : improve filter.
 
 20 June 2004 Sylvain Pion
 - Don't assume coordinates are doubles, call to_double().
